k8s/k8s/my-first-pod.yaml
# my-first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: laratest-pod
  labels:
    app: webserver
spec:
  containers:
  - name: pod-demo
    image: dustinwang/laratest:1.2
    ports:
    - containerPort: 8000
