k8s/k8s/laratest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laratest-service
spec:
  type: NodePort
  ports:
  - port: 8000
    nodePort: 30390
    protocol: TCP
    targetPort: 8000
  selector:
    app: webserver
