k8s/k8s/my-laratest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-laratest-service
spec:
  type: NodePort
  ports:
  - port: 8000
    nodePort: 30500
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-laratest
