k8s/k8s/my-laratest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: basic-ingress
spec:
 backend:
   serviceName: my-laratest-service
   servicePort: 8000
